--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "notistack": "^0.9.5",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-dropzone": "^10.2.1",
+    "react-grid-gallery": "^0.5.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
